# starwinds-magnetogram

./: .gitattributes  .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: Magnetogram-manipulation.ipynb  Magnetogram_manipulation.ipynb  Power_spectrum.ipynb  Shell-commands.ipynb  mnras-style-plot.ipynb
magnetogram/: __init__.py  associated_legendre.py  coefficients.py  colorbar_manual_tickmarks.py  convert_magnetogram.py  converter.py  energy_spectrum.py  fit_lightcurve.py  geometry.py  image_converter.py  longitudinal_field.py  parker_solution.py  pfss_magnetogram.py  pfss_stanford.py  plot_fit_lightcurve.py  plot_lsd.py  plot_magnetogram.py  plot_pfss.py  plot_zdi.py  plots.py  profile_shapes.py  profile_shapes_zdipy.py  reader_writer.py  rotate.py  rotate_magnetogram.py  spherical_harmonics_coefficients.py  zdi_geometry.py  zdi_lehmann.py  zdi_magnetogram.py
starwinds_magnetogram/: __init__.py  _version.py  associated_legendre.py  coefficients.py  converter.py  coordinate_transforms.py  fibonacci_sphere.py  geometry.py  image_converter.py  longitudinal_field.py  mnras.mplstyle  parker_solution.py  pfss_magnetogram.py  plot_lsd.py  plot_pfss.py  plot_zdi.py  plots.py  reader_writer.py  rotate.py  zdi_magnetogram.py
tests/: conftest.py  context.py  magnetograms.py  test_alfven_surface.py  test_coefficients.py  test_console_scripts.py  test_convert_magnetogram.py  test_converter.py  test_converter_az_pl.py  test_flow.py  test_geometry.py  test_image_converter.py  test_longitudinal_field.py  test_parker_solution.py  test_pfss_magnetogram.py  test_pfss_stanford.py  test_plot_lsd.py  test_reader_writer.py  test_rotate.py  test_rotate_magnetogram.py  test_zdi_magnetogram.py
