[metadata]
name = starwinds_magnetogram
version = 0.1.0
description = Stellar magnetogram visualisation and manipulation
author = Dag Evensberget
author_email = Dag.Evensberget@usq.edu.au
url = https://github.com/svaberg/starwinds-magnetogram/

[options]
packages =
    starwinds_magnetogram
    starwinds_magnetogram.bin
install_requires =
    numpy
    scipy
    matplotlib>3.2
    quaternion
    spherical_functions

[options.entry_points]
console_scripts =
    sw-convert-magnetogram=starwinds_magnetogram.bin.convert_magnetogram:main
    sw-plot-lsd=starwinds_magnetogram.bin.plot_lsd:main
    sw-plot-magnetogram=starwinds_magnetogram.bin.plot_magnetogram:main

[options.extras_require]
test =
    nbstripout
    pytest-console-scripts
    pytest
    nbval
    psutil
    pytest-cov
    codacy-coverage
